[tool.poetry]
name = "btg-energy-challenge"
version = "0.1.0"
description = ""
authors = ["Bruno Macedo Sanches <bruno.macedosanches@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"

[tool.poetry.dev-dependencies]
pandas = "2.0.3"
numpy = "1.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"